src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_arith/minus_null_1.deca
// Description :
//    test minus entre un null et un 1
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) L’opérande gauche est de type null, L’opérande droite est de type 1. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur -
class A{}
{
A a = new A();
int c = null - 1;
}
